--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "yeticss": "^7.3.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "yeticss": "^7.3.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
